# sonar-api-getter

./: README.md  pyproject.toml
src/sonar_api_getter/: cli.py
